# offload

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .swiftformat  .swiftlint.yml  .yamllint  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  justfile
.claude/: setup.sh
.claude/hooks/: session-start.sh
.codex/: setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  context-aware-ci.yml  ios-build.yml  ios-ci.yml  ios-tests.yml
backend/: README.md  pyproject.toml
backend/api/: README.md  pyproject.toml
backend/api/src/offload_backend/: __init__.py  apple_auth.py  apple_jwt.py  config.py  dependencies.py  errors.py  main.py  schemas.py  security.py  session_rate_limiter.py  session_security.py  usage_store.py  user_store.py
backend/api/src/offload_backend/providers/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
backend/api/src/offload_backend/routers/: __init__.py  auth.py  braindump.py  breakdown.py  decide.py  draft.py  execfunction.py  health.py  sessions.py  sessions_apple.py  usage.py
backend/api/tests/: conftest.py  test_anthropic_adapter.py  test_apple_jwt.py  test_auth.py  test_braindump.py  test_breakdown.py  test_breakdown_latency.py  test_config.py  test_decide.py  test_draft.py  test_execfunction.py  test_health.py  test_openai_retry.py  test_session_token_v2.py  test_sessions_apple.py  test_sessions_auth.py  test_usage.py  test_usage_store.py  test_user_store.py
docs/: AGENTS.md  CLAUDE.md  VOICE_CAPTURE_TESTING.md  VOICE_CAPTURE_TEST_RESULTS.md  architecture.md  design.md  index.yaml  product.md
docs/adrs/: AGENTS.md  README.md  adr-0001-technology-stack-and-architecture.md  adr-0002-terminology-alignment-for-capture-and-organization.md  adr-0003-adhd-focused-ux-ui-guardrails.md  adr-0004-tab-bar-navigation-shell-and-offload-cta.md  adr-0005-collection-ordering-and-hierarchy-persistence.md  adr-0006-ci-provider-selection.md  adr-0007-context-aware-ci-workflow-strategy.md  adr-0008-backend-api-privacy-mvp.md
docs/ci/: RCA.md  ci-readiness.md  ios-ci-rca.md
docs/decisions/: ADR-0001-stack.md  ADR-0003-adhd-ux-guardrails.md
docs/design/: AGENTS.md  README.md  design-backend-api-privacy-mvp.md  design-context-aware-ci-pipeline.md  (+4 more)
ios/: .swiftformat  .swiftlint.yml  FONT_SETUP.md  FONT_USAGE_AUDIT.md  README.md  SCAFFOLDING.md
scripts/: verify-remediation.sh
(+416 files in other folders)
