# Purpose: Backend API project metadata and test tool configuration.
# Authority: Config-level
# Governed by: AGENTS.md

[project]
name = "offload-backend-api"
version = "0.1.0"
description = "Offload backend API scaffold"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
  "ty>=0.0.1a0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/offload_backend/dependencies.py" = ["B008"]
"src/offload_backend/routers/*.py" = ["B008"]
